network-policy/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: np-demo
  namespace: np-demo
spec:
  selector:
    matchLabels:
      app: np-demo
  template:
    metadata:
      labels:
        app: np-demo
    spec:
      containers:
      - name: nginx
        image: nginx:1.26.2
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 128Mi
        ports:
        - containerPort: 80
