network-policy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: np-demo
  namespace: np-demo
spec:
  selector:
    app: np-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
