network-policy/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-same-ns
  namespace: np-demo
spec:
  podSelector:
    matchLabels:
      app: np-demo
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: np-demo
  policyTypes:
    - Ingress
